split-projects/networking-aws-aidevops-default-vpc/main.tf
# Auto-generated Terraform configuration
# Generated by tfstate-to-iac skill

# --- aws_internet_gateway (1) ---

resource "aws_internet_gateway" "aws_aidevops_igw" {
  vpc_id = "vpc-03aecb1e85e749ec9"
  tags = {
    "Name" = "AWS-AIDevOps-IGW"
  }
}

# --- aws_route_table (2) ---

resource "aws_route_table" "aws_aidevops_public_rt" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-0b2a31e01de323c10"
  }
  vpc_id = "vpc-03aecb1e85e749ec9"
  tags = {
    "Name" = "AWS-AIDevOps-Public-RT"
  }
}

resource "aws_route_table" "rtb_00d53d08f1765a46b" {
  vpc_id = "vpc-03aecb1e85e749ec9"
}

# --- aws_security_group (2) ---

resource "aws_security_group" "aws_aidevops_test_sg" {
  description = "AWS AIDevOps beta testing security group"
  name = "aws-aidevops-cpu-test-TestSecurityGroup-AaRJwoqh7c21"
  egress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 0
    protocol = "-1"
    to_port = 0
  }
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    description = "Jenkins"
    from_port = 8080
    protocol = "tcp"
    to_port = 8080
  }
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    description = "SSH access from your IP"
    from_port = 22
    protocol = "tcp"
    to_port = 22
  }
  vpc_id = "vpc-03aecb1e85e749ec9"
  tags = {
    "Name" = "AWS-AIDevOps-Test-SG"
    "Purpose" = "AWS-AIDevOps-Testing"
  }
}

resource "aws_security_group" "sg_087a882b795afe148" {
  description = "default VPC security group"
  name = "default"
  egress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 0
    protocol = "-1"
    to_port = 0
  }
  ingress {
    from_port = 0
    protocol = "-1"
    self = true
    to_port = 0
  }
  vpc_id = "vpc-03aecb1e85e749ec9"
}

# --- aws_subnet (1) ---

resource "aws_subnet" "aws_aidevops_public_subnet" {
  availability_zone = "us-west-2a"
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  vpc_id = "vpc-03aecb1e85e749ec9"
  tags = {
    "Name" = "AWS-AIDevOps-Public-Subnet"
  }
}

# --- aws_vpc (1) ---

resource "aws_vpc" "aws_aidevops_default_vpc" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"
  tags = {
    "Name" = "AWS-AIDevOps-Default-VPC"
  }
}
